compiler/src/bigproject/syntactic/CTXParser.java
// Generated from CTX.g4 by ANTLR 4.0

package bigproject.syntactic;
import bigproject.ast.*;
import bigproject.symbol.*;
import static bigproject.symbol.Symbol.symbol;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CTXParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__58=1, T__57=2, T__56=3, T__55=4, T__54=5, T__53=6, T__52=7, T__51=8, 
		T__50=9, T__49=10, T__48=11, T__47=12, T__46=13, T__45=14, T__44=15, T__43=16, 
		T__42=17, T__41=18, T__40=19, T__39=20, T__38=21, T__37=22, T__36=23, 
		T__35=24, T__34=25, T__33=26, T__32=27, T__31=28, T__30=29, T__29=30, 
		T__28=31, T__27=32, T__26=33, T__25=34, T__24=35, T__23=36, T__22=37, 
		T__21=38, T__20=39, T__19=40, T__18=41, T__17=42, T__16=43, T__15=44, 
		T__14=45, T__13=46, T__12=47, T__11=48, T__10=49, T__9=50, T__8=51, T__7=52, 
		T__6=53, T__5=54, T__4=55, T__3=56, T__2=57, T__1=58, T__0=59, INTEGER=60, 
		CHAR=61, DECINTEGER=62, HEXINTEGER=63, OCTINTEGER=64, STRING=65, IDENTIFIER=66, 
		WS=67, COMMENTS=68, LINE_COMMENT=69, INCLUDE_COMMENT=70;
	public static final String[] tokenNames = {
		"<INVALID>", "'&'", "'['", "'*'", "'<'", "'--'", "'continue'", "'!='", 
		"'<='", "'<<'", "'}'", "'char'", "'%'", "'->'", "'*='", "'union'", "')'", 
		"'='", "'|='", "'|'", "'!'", "'sizeof'", "'<<='", "']'", "'-='", "','", 
		"'while'", "'-'", "'('", "'&='", "'if'", "'int'", "'void'", "'>>='", "'{'", 
		"'...'", "'break'", "'+='", "'^='", "'else'", "'struct'", "'++'", "'>>'", 
		"'^'", "'.'", "'+'", "'for'", "'typedef'", "'return'", "';'", "'&&'", 
		"'||'", "'>'", "'%='", "'/='", "'=='", "'/'", "'~'", "'>='", "'sizeof '", 
		"INTEGER", "CHAR", "DECINTEGER", "HEXINTEGER", "OCTINTEGER", "STRING", 
		"IDENTIFIER", "WS", "COMMENTS", "LINE_COMMENT", "INCLUDE_COMMENT"
	};
	public static final int
		RULE_program = 0, RULE_declaration = 1, RULE_function_definition = 2, 
		RULE_parameters = 3, RULE_declarators = 4, RULE_init_declarators = 5, 
		RULE_init_declarator = 6, RULE_initializer = 7, RULE_initializers = 8, 
		RULE_type_specifier = 9, RULE_struct_or_union = 10, RULE_plain_declaration = 11, 
		RULE_declarator = 12, RULE_plain_declarator = 13, RULE_statement = 14, 
		RULE_expression_statement = 15, RULE_compound_statement = 16, RULE_selection_statement = 17, 
		RULE_while_statement = 18, RULE_for_statement = 19, RULE_jump_statement = 20, 
		RULE_expression = 21, RULE_assignment_expression = 22, RULE_assignment_operator = 23, 
		RULE_logical_or_expression = 24, RULE_logical_and_expression = 25, RULE_inclusive_or_expression = 26, 
		RULE_exclusive_or_expression = 27, RULE_and_expression = 28, RULE_equality_expression = 29, 
		RULE_equality_operator = 30, RULE_relational_expression = 31, RULE_relational_operator = 32, 
		RULE_shift_expression = 33, RULE_shift_operator = 34, RULE_additive_expression = 35, 
		RULE_additive_operator = 36, RULE_multiplicative_expression = 37, RULE_multiplicative_operator = 38, 
		RULE_cast_expression = 39, RULE_type_name = 40, RULE_unary_expression = 41, 
		RULE_unary_operator = 42, RULE_postfix_expression = 43, RULE_postfix = 44, 
		RULE_arguments = 45, RULE_primary_expression = 46, RULE_constant = 47, 
		RULE_typedef_name = 48, RULE_identifier = 49, RULE_string = 50, RULE_integer_constant = 51, 
		RULE_character_constant = 52;
	public static final String[] ruleNames = {
		"program", "declaration", "function_definition", "parameters", "declarators", 
		"init_declarators", "init_declarator", "initializer", "initializers", 
		"type_specifier", "struct_or_union", "plain_declaration", "declarator", 
		"plain_declarator", "statement", "expression_statement", "compound_statement", 
		"selection_statement", "while_statement", "for_statement", "jump_statement", 
		"expression", "assignment_expression", "assignment_operator", "logical_or_expression", 
		"logical_and_expression", "inclusive_or_expression", "exclusive_or_expression", 
		"and_expression", "equality_expression", "equality_operator", "relational_expression", 
		"relational_operator", "shift_expression", "shift_operator", "additive_expression", 
		"additive_operator", "multiplicative_expression", "multiplicative_operator", 
		"cast_expression", "type_name", "unary_expression", "unary_operator", 
		"postfix_expression", "postfix", "arguments", "primary_expression", "constant", 
		"typedef_name", "identifier", "string", "integer_constant", "character_constant"
	};

	@Override
	public String getGrammarFileName() { return "CTX.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public CTXParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public Program v;
		public DeclarationContext a;
		public Function_definitionContext b;
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public Function_definitionContext function_definition(int i) {
			return getRuleContext(Function_definitionContext.class,i);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<Function_definitionContext> function_definition() {
			return getRuleContexts(Function_definitionContext.class);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CTXListener ) ((CTXListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CTXListener ) ((CTXListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			List<DeclStat> list = new ArrayList<DeclStat>();
			setState(113); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(113);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(107); ((ProgramContext)_localctx).a = declaration();
					list.add(((ProgramContext)_localctx).a.v);
					}
					break;

				case 2:
					{
					setState(110); ((ProgramContext)_localctx).b = function_definition();
					list.add(((ProgramContext)_localctx).b.v);
					}
					break;
				}
				}
				setState(115); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((((_la - 11)) & ~0x3f) == 0 && ((1L << (_la - 11)) & ((1L << (11 - 11)) | (1L << (15 - 11)) | (1L << (31 - 11)) | (1L << (32 - 11)) | (1L << (40 - 11)) | (1L << (47 - 11)) | (1L << (IDENTIFIER - 11)))) != 0) );
			((ProgramContext)_localctx).v =  new Program(list);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public DeclStat v;
		public Type_specifierContext a;
		public DeclaratorsContext b;
		public Init_declaratorsContext c;
		public Init_declaratorsContext init_declarators() {
			return getRuleContext(Init_declaratorsContext.class,0);
		}
		public DeclaratorsContext declarators() {
			return getRuleContext(DeclaratorsContext.class,0);
		}
		public Type_specifierContext type_specifier() {
			return getRuleContext(Type_specifierContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CTXListener ) ((CTXListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CTXListener ) ((CTXListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		int _la;
		try {
			setState(135);
			switch (_input.LA(1)) {
			case 47:
				enterOuterAlt(_localctx, 1);
				{
				setState(119); match(47);
				setState(120); ((DeclarationContext)_localctx).a = type_specifier();
				setState(121); ((DeclarationContext)_localctx).b = declarators();
				setState(122); match(49);
				((DeclarationContext)_localctx).v =  new TypeDecl(((DeclarationContext)_localctx).a.v, ((DeclarationContext)_localctx).b.v);
				}
				break;
			case 11:
			case 15:
			case 31:
			case 32:
			case 40:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				InitDeclors init = null;
				setState(126); ((DeclarationContext)_localctx).a = type_specifier();
				setState(130);
				_la = _input.LA(1);
				if (_la==3 || _la==IDENTIFIER) {
					{
					setState(127); ((DeclarationContext)_localctx).c = init_declarators();
					init = ((DeclarationContext)_localctx).c.v;
					}
				}

				setState(132); match(49);
				((DeclarationContext)_localctx).v =  new VarDecl(((DeclarationContext)_localctx).a.v, init);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_definitionContext extends ParserRuleContext {
		public FunDecl v;
		public Type_specifierContext a;
		public Plain_declaratorContext b;
		public ParametersContext d;
		public Compound_statementContext c;
		public Plain_declaratorContext plain_declarator() {
			return getRuleContext(Plain_declaratorContext.class,0);
		}
		public Type_specifierContext type_specifier() {
			return getRuleContext(Type_specifierContext.class,0);
		}
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public Compound_statementContext compound_statement() {
			return getRuleContext(Compound_statementContext.class,0);
		}
		public Function_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CTXListener ) ((CTXListener)listener).enterFunction_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CTXListener ) ((CTXListener)listener).exitFunction_definition(this);
		}
	}

	public final Function_definitionContext function_definition() throws RecognitionException {
		Function_definitionContext _localctx = new Function_definitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_function_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			Params para = null;
			setState(138); ((Function_definitionContext)_localctx).a = type_specifier();
			setState(139); ((Function_definitionContext)_localctx).b = plain_declarator();
			setState(140); match(28);
			setState(144);
			_la = _input.LA(1);
			if (((((_la - 11)) & ~0x3f) == 0 && ((1L << (_la - 11)) & ((1L << (11 - 11)) | (1L << (15 - 11)) | (1L << (31 - 11)) | (1L << (32 - 11)) | (1L << (40 - 11)) | (1L << (IDENTIFIER - 11)))) != 0)) {
				{
				setState(141); ((Function_definitionContext)_localctx).d = parameters();
				para = ((Function_definitionContext)_localctx).d.v;
				}
			}

			setState(146); match(16);
			setState(147); ((Function_definitionContext)_localctx).c = compound_statement();
			((Function_definitionContext)_localctx).v =  new FunDecl(((Function_definitionContext)_localctx).a.v, ((Function_definitionContext)_localctx).b.v, para, ((Function_definitionContext)_localctx).c.v);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametersContext extends ParserRuleContext {
		public Params v;
		public Plain_declarationContext a;
		public Plain_declarationContext b;
		public Plain_declarationContext plain_declaration(int i) {
			return getRuleContext(Plain_declarationContext.class,i);
		}
		public List<Plain_declarationContext> plain_declaration() {
			return getRuleContexts(Plain_declarationContext.class);
		}
		public ParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CTXListener ) ((CTXListener)listener).enterParameters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CTXListener ) ((CTXListener)listener).exitParameters(this);
		}
	}

	public final ParametersContext parameters() throws RecognitionException {
		ParametersContext _localctx = new ParametersContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_parameters);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			boolean other = false; List<PlanDecl> list = new ArrayList<PlanDecl>();
			setState(151); ((ParametersContext)_localctx).a = plain_declaration();
			list.add(((ParametersContext)_localctx).a.v);
			setState(159);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(153); match(25);
					setState(154); ((ParametersContext)_localctx).b = plain_declaration();
					list.add(((ParametersContext)_localctx).b.v);
					}
					} 
				}
				setState(161);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(165);
			_la = _input.LA(1);
			if (_la==25) {
				{
				setState(162); match(25);
				setState(163); match(35);
				other = true;
				}
			}

			((ParametersContext)_localctx).v =  new Params(list, other);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaratorsContext extends ParserRuleContext {
		public Declors v;
		public DeclaratorContext a;
		public DeclaratorContext b;
		public List<DeclaratorContext> declarator() {
			return getRuleContexts(DeclaratorContext.class);
		}
		public DeclaratorContext declarator(int i) {
			return getRuleContext(DeclaratorContext.class,i);
		}
		public DeclaratorsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarators; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CTXListener ) ((CTXListener)listener).enterDeclarators(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CTXListener ) ((CTXListener)listener).exitDeclarators(this);
		}
	}

	public final DeclaratorsContext declarators() throws RecognitionException {
		DeclaratorsContext _localctx = new DeclaratorsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declarators);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			List<Declor> list = new ArrayList<Declor>();
			setState(170); ((DeclaratorsContext)_localctx).a = declarator();
			list.add(((DeclaratorsContext)_localctx).a.v);
			setState(178);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==25) {
				{
				{
				setState(172); match(25);
				setState(173); ((DeclaratorsContext)_localctx).b = declarator();
				list.add(((DeclaratorsContext)_localctx).b.v);
				}
				}
				setState(180);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			((DeclaratorsContext)_localctx).v =  new Declors(list);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Init_declaratorsContext extends ParserRuleContext {
		public InitDeclors v;
		public Init_declaratorContext a;
		public Init_declaratorContext b;
		public List<Init_declaratorContext> init_declarator() {
			return getRuleContexts(Init_declaratorContext.class);
		}
		public Init_declaratorContext init_declarator(int i) {
			return getRuleContext(Init_declaratorContext.class,i);
		}
		public Init_declaratorsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init_declarators; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CTXListener ) ((CTXListener)listener).enterInit_declarators(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CTXListener ) ((CTXListener)listener).exitInit_declarators(this);
		}
	}

	public final Init_declaratorsContext init_declarators() throws RecognitionException {
		Init_declaratorsContext _localctx = new Init_declaratorsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_init_declarators);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			List<InitDeclor> list = new ArrayList<InitDeclor>();
			setState(184); ((Init_declaratorsContext)_localctx).a = init_declarator();
			list.add(((Init_declaratorsContext)_localctx).a.v);
			setState(192);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==25) {
				{
				{
				setState(186); match(25);
				setState(187); ((Init_declaratorsContext)_localctx).b = init_declarator();
				list.add(((Init_declaratorsContext)_localctx).b.v);
				}
				}
				setState(194);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			((Init_declaratorsContext)_localctx).v =  new InitDeclors(list);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
